<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/DB"/>

    <EditText
        android:id="@+id/enterNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:hint="@string/nameET"
        android:textSize="22sp"/>
    <EditText
        android:id="@+id/lastNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:hint="@string/lastNameET"
        android:textSize="22sp"/>
    <EditText
        android:id="@+id/enterAgeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:hint="@string/ageET"
        android:textSize="22sp"/>

    <Spinner
        android:id="@+id/positionSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/addNameBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_on_primary"
            android:text="@string/saveDB"
            android:textColor="#ffffff"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/printNameBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_on_secondary"
            android:text="@string/infoDB"
            android:textColor="#ffffff"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/clearTableBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_on_primary"
            android:text="@string/clearDB"
            android:textColor="#ffffff"
            android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:padding="10sp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:padding="10sp"
                android:text="@string/lastname"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/age"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/role"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="\n\n"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16dp"/>
            <TextView
                android:id="@+id/lastNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="\n\n"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16dp"/>
            <TextView
                android:id="@+id/ageTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="\n\n"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16dp"/>
            <TextView
                android:id="@+id/roleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="\n\n"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16dp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>